# ti

./: .gitignore  CHANGES.rst  README.rst  comparison.md  pyproject.toml  pytest.ini  scratch_3.py.lprof  setup.py  todo.md
.ideaRunConfigurations/: all tests.run.xml  test_dikt annotated_with_default.run.xml  test_dikt defaultdikt__annotated.run.xml  test_dikt dikt_with_field.run.xml  test_dikt init_mismatches_annotation.run.xml  test_dikt.run.xml  test_diktfield build_diktfield_from_annotation.run.xml  test_diktfield.run.xml  test_field.run.xml
docs/: has_fields.drawio  has_fields.md  has_fields.puml  space.txt
test/: __init__.py  conftest.py  test_config.py  test_dikt.py  test_diktfield.py  test_field.py  test_times.py  testutils.py  util.py
test/_deprecated/: test_dikt.py  test_diktfield.py  test_field.py
test/sheets/: 23-12-21--e2e-tests-integration--negative-time-bug.toml
test/test_action/: test_log.py  test_on.py  test_stop.py
test/test_space/: test_space_subclasses.py
test/test_store/: test_features.py  test_models.py  test_store.py
ti/: __init__.py  color.py  config.py  dikt.py  item.py  note.py  store.py  ti.py  time.py  times.py  util.py  xarrow.py
ti/_dev/: generate_completion.py
ti/action/: log.py
timefred/: __init__.py  __main__.py  carmitush.py  color.py  config.py  dikt.py  error.py  field.py  has_fields.py  item.py  log.py  note.py  prebreak.py  singleton.py  space.py  store.py  tag.py  timefred.py  times.py  util.py  xarrow.py
timefred/_deprecated/dikt/: __init__.py  diktutils.py
timefred/_dev/: __init__.py  generate_completion.py
timefred/action/: __init__.py  edit.py  fin.py  log.py  note.py  on.py  status.py  stop.py  tag.py  util.py
timefred/color/: __init__.py  color.py  colored.py
timefred/dikt/: __init__.py  dikt.py  diktutils.py
timefred/integration/: __init__.py  carmitush.py
timefred/integration/jira/: __init__.py  ticket.py
timefred/space/: __init__.py  dict_space.py  field.py  list_space.py  space.py  string_space.py
timefred/store/: __init__.py  models.py  store.py
timefred/time/: __init__.py  timespan.py  timeutils.py  xarrow.py
timefred/util/: __init__.py  misc.py  string.py
