[tool.poetry]
name = "timefred"
version = "0.0.3"
description = "Not a silly simple time tracker"
authors = ["Gilad Barnea <giladbrn@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10"
arrow = "^1.1.0"
pytz = "^2021.1"
PyYAML = "^5.4.1"
multimethod = { git = "https://github.com/giladbarnea/multimethod.git", branch = "main" }
pydantic = {url = "https://files.pythonhosted.org/packages/ff/74/54e030641601112309f6d2af620774e9080f99c7a15742fc6a0b170c4076/pydantic-1.8.2-py3-none-any.whl"}
pytest = "^6.2.5"
screeninfo = "^0.7"
ipython-autoimport = "^0.3"

[tool.poetry.dev-dependencies]
IPython = { path = "../ipython/", develop = true }
pdbpp = { path = "../pdbpp/", develop = true }
pytest = { version = "latest", optional = true }
rich = { path = "../rich/", develop = true }
# loguru = { version = "^0.5.3", optional = true }

[tool.poetry.build]
generate-setup-file = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tf = 'timefred.timefred:main'
